# agentic-developer-mcp

./: .gitignore  .sample.env  Dockerfile  Dockerfile.cli  Dockerfile.codex  README.md  _config.yml  claude-desktop-config.json  docker-compose.1.yml  docker-compose.yml  find_free_port.py  mcp-server.js  package-lock.json  package.json  run_codex.sh  run_ors.sh  servers_config.http.json  servers_config.json  servers_config.stdio.json  start-cli.sh  start-easy.sh  start-multiple-instances.sh  start-single.sh  start.sh
.agent/: mcps.json
docs/plans/: start-dev-done.md  start-dev.md
src/: __init__.py  pyproject.toml
src/mcp_server/: __init__.py  __main__.py  echo.py  server.py
